<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="@dimen/burgoverde_size200"
        android:layout_height="@dimen/burgoverde_size200"
        android:layout_marginTop="@dimen/burgoverde_margin50"
        android:contentDescription="@string/bugoverde_content_description_logo"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_banner_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/burgoverde_margin24"
        android:layout_marginTop="@dimen/burgoverde_margin50"
        android:text="@string/bugoverde_app_title"
        android:textStyle="bold"
        android:textSize="@dimen/burgoverde_font_size16"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logoIv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitleTv"
        android:layout_width="@dimen/burgoverde_size0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/burgoverde_margin24"
        android:layout_marginTop="@dimen/burgoverde_margin4"
        android:text="@string/bugoverde_app_subtitle"
        android:textSize="@dimen/burgoverde_font_size12"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/burgoverde_margin24"
        android:text="@string/bugoverde_register_button_text"
        app:layout_constraintTop_toBottomOf="@id/subtitleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/burgoverde_size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/burgoverde_margin4"
        android:layout_marginBottom="@dimen/burgoverde_margin50"
        android:text="@string/bugoverde_login_button_text"
        app:layout_constraintBottom_toTopOf="@id/photoIv"
        app:layout_constraintEnd_toEndOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintTop_toBottomOf="@id/registerBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/photoIv"
        android:layout_width="@dimen/burgoverde_size0"
        android:layout_height="@dimen/burgoverde_size150"
        android:contentDescription="@string/bugoverde_content_description_onboarding_banner"
        android:scaleType="centerCrop"
        android:src="@drawable/burgo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>