<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.userRegister.UserRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/burgoverde_margin24"
        android:paddingBottom="@dimen/burgoverde_margin24">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photoIv"
            android:layout_width="@dimen/burgoverde_size150"
            android:layout_height="@dimen/burgoverde_size150"
            android:layout_marginTop="@dimen/burgoverde_margin50"
            android:contentDescription="@string/bugoverde_content_description_logo"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@color/bugoverde_beige"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/changePicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/burgoverde_font_size11"
            android:text="@string/bugoverde_change_photo_button_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/burgoverde_margin24"
            android:layout_marginTop="@dimen/burgoverde_margin24"
            tools:text="Pessoa"
            android:textStyle="bold"
            android:textSize="@dimen/burgoverde_font_size24"
            android:textAlignment="center"
            android:textColor="@color/bugoverde_dark_green"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/burgoverde_margin50"
            android:backgroundTint="@color/bugoverde_dark_green"
            app:icon="@drawable/ic_logout"
            app:iconSize="@dimen/burgoverde_size16"
            android:text="@string/bugoverde_logout_button_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aboutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/burgoverde_margin24"
            android:layout_marginTop="@dimen/burgoverde_margin24"
            android:text="@string/bugoverde_app_info"
            android:textSize="@dimen/burgoverde_font_size12"
            android:textAlignment="center"
            android:textColor="@color/bugoverde_dark_green"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/feedbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/burgoverde_font_size11"
            android:text="@string/bugoverde_send_feedback_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />
    </LinearLayout>
</ScrollView>
